syntax = "proto3";

option go_package = "./pb";

message WifiDevice {
  string bssid = 1;
  optional Location location = 2;

  message Location {
    optional int64 latitude = 1;
    optional int64 longitude = 2;
    optional int64 horizontal_accuracy = 3;
    optional int64 unknown_value4 = 4;
    optional int64 altitude = 5;
    optional int64 vertical_accuracy = 6;
    // optional int64 speed = 7;
    // optional int64 course = 8;
    // optional int64 timestamp = 9;
    // optional int64 unknown_context = 10;
    optional int64 motion_activity_type = 11;
    optional int64 motion_activity_confidence = 12;
    // optional int64 provider = 13;
    // optional int64 floor = 14;
    // optional int64 unknown15 = 15;
    // optional int64 motion_vehicle_connected_state_changed = 16;
    // Ignored 17-31 because they are mostly unused. Very much spyware-esq shit
  }
}

message AppleWLoc {
  optional int64 unknown_value0 = 1;
  repeated WifiDevice wifi_devices = 2;
  optional int32 unknown_value1 = 3;
  optional int32 return_single_result = 4;
  optional string APIName = 5;
  optional string unknown_value2 = 6;
}
